...
                    .fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                UsernameText(
                    text = username,
                    modifier = Modifier.testTag("usernameText")
                )
                Spacer(modifier = Modifier.width(8.dp))
                TopBarText(
                    text = if (isDataEmptyOrNull(encounter?.visitId)) {
                        stringResource(R.string.no_visit_id)
                    } else {
                        encounter!!.visitId
                    },
                    modifier = Modifier.testTag("visitIdText")

                )
            }
        },
        content = {
            Column(modifier = Modifier.fillMaxSize()) {
...
                        if (selectedTabIndex.intValue > 0) {
                            selectedTabIndex.intValue -= 1 // Go back one page
                        }
                    },
                    enabled = selectedTabIndex.intValue > 0,  // Disable when on first tab
                    modifier = Modifier.padding(start = 16.dp)  // Ensure it is 16.dp from the edge
                        .testTag("backButton")
                ) {
                    Text(text = "Prev")
                }

                // Cancel Button
                MediButton(
...
                        } else {
                            // Otherwise show the cancel popup
                            showCancelPopup = true
                        }
                    },
                    status = ButtonStatus.WARNING,
                    modifier = Modifier.testTag("cancelButton")
                ) {
                    Text(text = "Cancel")
                }

                // Save Button
                MediButton(
...
                            errorText = "Departure time must be after Arrival time"
                        } else {
                            showSavePopup = true
                        }
                    },
                    status = ButtonStatus.CONFIRM,
                    modifier = Modifier.testTag("saveButton")

                ) {
                    Text(text = "Save")
                }

                // Forward Button
...
                        if (selectedTabIndex.intValue < tabs.size - 1) {
                            selectedTabIndex.intValue += 1 // Increment tab index
                        }
                    },
                    enabled = selectedTabIndex.intValue < tabs.size - 1, // Disable when on last tab
                    modifier = Modifier.padding(end = 16.dp)  // Ensure it is 16.dp from the edge
                        .testTag("forwardButton")
                ) {
                    Text(text = "Next")
                }
            }
        }
    )
...
                        showCancelPopup = false
                    }
                ) {
                    Text("Return to Entry")
                }
            },
            modifier = Modifier.testTag("cancelPopup")
        )
    }

    if (showErrorPopup) {
        ErrorPopup(
            errorMessage = errorText,
            onDismiss = { showErrorPopup = false },
            modifier = Modifier.testTag("errorPopup")
        )
    }

    if (showSavePopup) {
        val coroutineScope = rememberCoroutineScope()

...
                            } else if (responseResult == ApiResponseType.LOGOUT) {
                                viewModel.logout()
                            }
                        }
                    },
                    status = ButtonStatus.CONFIRM,
                    modifier = Modifier.testTag("confirmSaveAndContinueButton")
                ) {
                    Text("Save & Continue")
                }

                MediButton(
                    onClick = {
...
                    status = ButtonStatus.WARNING,
                    modifier = Modifier.testTag("cancelSaveButton")
                ) {
                    Text("No")
                }
            },
            modifier = Modifier.testTag("savePopup")
        )
    }

    // Freeze screen and show loading indicator when loading
    LoadingIndicator(isLoading)
}
...
