...
                            onDone = {
                                focusManager.clearFocus()
                            }
                        ),
                        singleLine = true,
                        modifier = Modifier.weight(1f)
                            .testTag("visitIdTextField"),
                        enabled = isEnabled,
                        emptyHighlight = encounter.visitId == ""
                    )

                    MediButton(onClick = { viewModel.generateVisitID() },
                        modifier = Modifier.weight(0.5f)
...
                AgeInputField(
                    age = encounter.age,
                    onAgeChange = { newAge ->
                        viewModel.setAge(newAge)
                    },
                    emptyHighlight = true,
                    modifier = Modifier.testTag("ageInputField")
                )
            },
            FormSectionData(
                title = "Role",
                required = false
            ) {
...
