...
                    dropdownLabel = "Discharge Disposition",
                    onSelectionChanged = { newDisplayValue ->
                        viewModel.setDepartureDest(newDisplayValue?: "")
                        focusManager.clearFocus()
                    },
                    emptyHighlight = true,
                    modifier = Modifier.testTag("departureDestinationDropdown")
                )
            },
            FormSectionData(
                title = "Discharge Diagnosis",
                required = false
            ) {
...
